--- a/index.html
+++ b/index.html
@@ -21,6 +21,23 @@
         <a href="#" class="logo">
             <img src="./img/logo.png" alt="">
         </a>
+        <ul class="style_Picker">
+            <li class="active">
+                <a href="https://wawweb.github.io/MML-data_stage/" class="gold_Red"></a>
+            </li>
+            <li>
+                <a href="https://wawweb.github.io/MML-data-N/html/information.html" class="universe" >1</a>
+            </li>
+            <li>
+                <a href="https://wawweb.github.io/MML-data-star_J/" class="universe" >2</a>
+            </li>
+            <li>
+                <a href="https://wawweb.github.io/MML-data-px_J/" class="px" >3</a>
+            </li>
+            <li>
+                <a href="https://wawweb.github.io/MML-data-ball_J/" class="ball" >4</a>
+            </li>
+        </ul>
     </header>
     <main>
         <div class="bonusPoint">
