--- a/index.html
+++ b/index.html
@@ -22,20 +22,26 @@
             <img src="./img/logo.png" alt="">
         </a>
         <ul class="style_Picker">
-            <li class="active">
+            <li>
                 <a href="https://wawweb.github.io/MML-data_stage/" class="gold_Red"></a>
             </li>
             <li>
-                <a href="https://wawweb.github.io/MML-data-N/html/information.html" class="universe" >1</a>
+                <a href="https://wawweb.github.io/MML-data-star_J/" class="universe">1</a>
             </li>
             <li>
-                <a href="https://wawweb.github.io/MML-data-star_J/" class="universe" >2</a>
+                <a href="https://wawweb.github.io/MML-data-N/html/information.html" class="universe">2</a>
             </li>
             <li>
-                <a href="https://wawweb.github.io/MML-data-px_J/" class="px" >3</a>
+                <a href="https://wawweb.github.io/MML-data-px_J/" class="px">3</a>
             </li>
             <li>
-                <a href="https://wawweb.github.io/MML-data-ball_J/" class="ball" >4</a>
+                <a href="https://wawweb.github.io/MML-data-px_N/html/information.html" class="px">4</a>
+            </li>
+            <li>
+                <a href="https://wawweb.github.io/MML-data-ball_J/" class="ball">5</a>
+            </li>
+            <li>
+                <a href="https://wawweb.github.io/MML-data-ball_N/html/information.html" class="ball">6</a>
             </li>
         </ul>
     </header>
